<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4CEF6"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo electrónico"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="36dp" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="7dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/btnEntrar"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPassword"
        tools:layout_editor_absoluteY="61dp" />

    <CheckBox
        android:id="@+id/CerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoCerrarSesion"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <CheckBox
        android:id="@+id/OlvidarContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OlvidarContraseña"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="Contraseña"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:layout_editor_absoluteY="36dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Regístrate"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Es gratis (y lo seguirá siendo)."
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txt_Nombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="Nombre:"
        app:layout_constraintEnd_toEndOf="@+id/txt_Apellidos2"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txt_Nombre"
        android:layout_width="162dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:background="#F8F4F4"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtNombre"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Nombres"
        app:layout_constraintStart_toEndOf="@+id/txt_Nombres"
        app:layout_constraintTop_toTopOf="@+id/txt_Nombres" />

    <TextView
        android:id="@+id/txt_Apellidos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txt_Apellidos"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nombres"
        tools:layout_editor_absoluteX="65dp" />

    <EditText
        android:id="@+id/txt_Apellido"
        android:layout_width="159dp"
        android:layout_height="37dp"
        android:background="#FAF9F9"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_ApelliDos"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Apellidos2"
        app:layout_constraintEnd_toEndOf="@+id/txt_Nombre"
        app:layout_constraintStart_toStartOf="@+id/txt_Nombre"
        app:layout_constraintTop_toTopOf="@+id/txt_Apellidos2" />

    <TextView
        android:id="@+id/txt_correo"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtCorreo"
        app:layout_constraintEnd_toEndOf="@+id/txt_Apellidos2"
        app:layout_constraintTop_toBottomOf="@+id/txt_Apellidos2" />

    <EditText
        android:id="@+id/textCorreo"
        android:layout_width="158dp"
        android:layout_height="35dp"
        android:background="#F8F5F5"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_correo"
        app:layout_constraintEnd_toEndOf="@+id/txt_Apellido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_Apellido"
        app:layout_constraintTop_toTopOf="@+id/txt_correo" />

    <TextView
        android:id="@+id/txt_clave"
        android:layout_width="73dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtContraseña"
        app:layout_constraintEnd_toEndOf="@+id/txt_correo"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo" />

    <EditText
        android:id="@+id/Contraseña"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:background="#F8F5F5"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_clave"
        app:layout_constraintEnd_toEndOf="@+id/textCorreo"
        app:layout_constraintStart_toStartOf="@+id/textCorreo"
        app:layout_constraintTop_toTopOf="@+id/txt_clave" />

    <TextView
        android:id="@+id/txt_Sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtSexo"
        app:layout_constraintEnd_toEndOf="@+id/txt_clave"
        app:layout_constraintTop_toBottomOf="@+id/txt_clave" />

    <Spinner
        android:id="@+id/Spinner_Sexo"
        android:layout_width="164dp"
        android:layout_height="28dp"
        android:backgroundTint="@color/black"
        android:scrollbarSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Sexo"
        app:layout_constraintEnd_toEndOf="@+id/Contraseña"
        app:layout_constraintStart_toStartOf="@+id/Contraseña"
        app:layout_constraintTop_toTopOf="@+id/txt_Sexo" />

    <TextView
        android:id="@+id/txt_Nacimiento"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/FechaNacimiento"
        app:layout_constraintEnd_toEndOf="@+id/txt_Sexo"
        app:layout_constraintTop_toBottomOf="@+id/txt_Sexo" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="47dp"
        android:layout_height="24dp"
        android:scrollbarSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Nacimiento"
        app:layout_constraintStart_toStartOf="@+id/Spinner_Sexo"
        app:layout_constraintTop_toTopOf="@+id/txt_Nacimiento" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="74dp"
        android:layout_height="23dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="@+id/Spinner_Sexo"
        app:layout_constraintTop_toTopOf="@+id/spinner2" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="57dp"
        android:layout_height="22dp"
        android:layout_marginStart="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner3"
        app:layout_constraintStart_toStartOf="@+id/Spinner_Sexo"
        app:layout_constraintTop_toTopOf="@+id/spinner3" />

    <TextView
        android:id="@+id/txt_explicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Explicación"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/spinner2"
        tools:layout_editor_absoluteY="545dp" />

    <Button
        android:id="@+id/btn_Registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8BC34A"
        android:text="@string/txt_Registrate"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/txt_explicacion"
        tools:layout_editor_absoluteY="574dp" />

</androidx.constraintlayout.widget.ConstraintLayout>